--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "babel-preset-stage-0": "^6.1.2",
     "babel-runtime": "^5.8.0",
     "bootstrap": "^3.3.7",
+    "bootstrap-sass": "^3.3.7",
+    "bootstrap-sass-loader": "^1.0.10",
     "cross-env": "^1.0.8",
     "css-loader": "^0.23.0",
     "cssnext-loader": "^1.0.1",
@@ -50,6 +52,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.4.2",
     "html-loader": "^0.3.0",
+    "imports-loader": "^0.6.5",
     "inject-loader": "^2.0.1",
     "jquery": "^3.1.0",
     "json-loader": "^0.5.4",
